--- a/django-openstack/src/django_openstack/templates/django_openstack/nova/images/_list.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/nova/images/_list.html
@@ -54,17 +54,17 @@
                   <div id="private" class="privacy">Private Image</div>
                 {% endif %}
 
-                <a id="launch_{{ image.id }}" class="launch" href="{% url nova_images_launch project.projectname image.id %}" title="Click to launch image">Launch</a>
+                <a id="launch_{{ image.id }}" class="launch" href="{% url nova_images_launch tenant.id image.id %}" title="Click to launch image">Launch</a>
                 {% if user.username == ami.ownerId %}
-                  <a id="edit_image_link" href="{% url nova_images_update project.projectname ami.id %}">Edit Image</a>
+                  <a id="edit_image_link" href="{% url nova_images_update tenant.id ami.id %}">Edit Image</a>
                 {% endif %}
 
               </div>
-              <a id="close_detail" href="{% url nova_images project.projectname %}">[x] close</a>
-              
+              <a id="close_detail" href="{% url nova_images tenant.id %}">[x] close</a>
+
               {% if user.username == ami.ownerId %}
                 <span class="image_privacy">
-                  <form id="privacy_{{ ami.id }}" action="{% url nova_images_privacy project.projectname ami.id %}" method="post" accept-charset="utf-8">
+                  <form id="privacy_{{ ami.id }}" action="{% url nova_images_privacy tenant.id ami.id %}" method="post" accept-charset="utf-8">
                     {% csrf_token %}
                     {% if ami.is_public %}
                       <input class="private" type="submit" value="{% trans "Make Private" %}" />
@@ -75,18 +75,18 @@
                 </span>
 
                 <span class="delete">
-                  <form id="delete_{{ ami.id }}" action="{% url nova_images_remove project.projectname ami.id %}" method="post" accept-charset="utf-8">
+                  <form id="delete_{{ ami.id }}" action="{% url nova_images_remove tenant.id ami.id %}" method="post" accept-charset="utf-8">
                     {% csrf_token %}
                     <input type="submit" value="{% trans "Remove Image" %}" />
                   </form>
                 </span>
-              {% endif %}              
+              {% endif %}
             </div>
           </td>
         {% else %}
           <tr class="{% cycle 'odd' 'even' %}">
             <td class="image_id">
-              <a href="{% url nova_images_detail project.projectname image.id %}">{% if image.displayName %}{{ image.displayName }}{%else%}{{ image.id }}{% endif %}</a>
+              <a href="{% url nova_images_detail tenant.id image.id %}">{% if image.displayName %}{{ image.displayName }}{%else%}{{ image.id }}{% endif %}</a>
             </td>
             <td class="image_location odd">
               {% if image.description %}
@@ -96,7 +96,7 @@
               {% endif %}
             </td>
             <td class="image_owner_id">{{ image.ownerId }}</td>
-            <td class="image_launch_btn odd"><a id="launch_{{ image.id }}" class="launch" href="{% url nova_images_launch project.projectname image.id %}">Launch</a></td>
+            <td class="image_launch_btn odd"><a id="launch_{{ image.id }}" class="launch" href="{% url nova_images_launch tenant.id image.id %}">Launch</a></td>
             {#<td class="odd"><a class="ui-state-default ui-corner-all" onclick="$('#dlg_launch').dialog('open');">Launch</a></td>#}
           </tr>
         {% endif %}
