--- a/django-openstack/src/django_openstack/templates/django_openstack/nova/instances/_instances_list.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/nova/instances/_instances_list.html
@@ -54,15 +54,15 @@
 
                 <div id="last" class="column">
                   {% if instance.state == "running" %}
-                  <a href="{% url nova_instances_console project.projectname instance.id %}" id="console_{{instance.id}}" class="console" target="_blank">Show Console</a>
+                  <a href="{% url nova_instances_console tenant.id instance.id %}" id="console_{{instance.id}}" class="console" target="_blank">Show Console</a>
                   {% if enable_vnc %}
-                    <a href="{% url nova_instances_vnc project.projectname instance.id %}" id="vnc_{{instance.id}}" class="console" target="_blank">VNC</a>{% endif %}
+                    <a href="{% url nova_instances_vnc tenant.id instance.id %}" id="vnc_{{instance.id}}" class="console" target="_blank">VNC</a>{% endif %}
                   {% endif %}
-                  <a id="edit_instance_link" href="{% url nova_instance_update project.projectname instance.id %}">Edit Instance</a>
+                  <a id="edit_instance_link" href="{% url nova_instance_update tenant.id instance.id %}">Edit Instance</a>
                  </div>
 
                  <span class="delete">
-                    <form id="form_terminate_{{ instance.id }}" class="form-terminate" method="post" action="{% url nova_instances_terminate project.projectname %}" >
+                    <form id="form_terminate_{{ instance.id }}" class="form-terminate" method="post" action="{% url nova_instances_terminate tenant.id %}" >
                       <input name="instance_id" type="hidden" value="{{ instance.id }}" />
                       <input id="terminate_{{instance.id}}" class="terminate" type="submit" value="Terminate" />
                       {% csrf_token %}
@@ -74,20 +74,20 @@
             </td>
           {% else %}
 
-            <td><a href="{% url nova_instances_detail project.projectname instance.id %}">{{ instance.id }} {% if instance.displayName %}({{ instance.displayName }}){% endif %}
+            <td><a href="{% url nova_instances_detail tenant.id instance.id %}">{{ instance.id }} {% if instance.displayName %}({{ instance.displayName }}){% endif %}
               </a></td>
             <td class="odd">{{ instance.image_id }}</td>
             <td>{{ instance.instance_type }}</td>
             <td class="odd">{{ instance.dns_name }}</td>
             <td>{{ instance.state }}</td>
             <td id="actions" class="odd">
-              <form id="form_terminate_{{ instance.id }}" class="form-terminate" method="post" action="{% url nova_instances_terminate project.projectname %}" >
+              <form id="form_terminate_{{ instance.id }}" class="form-terminate" method="post" action="{% url nova_instances_terminate tenant.id %}" >
                 <input name="instance_id" type="hidden" value="{{ instance.id }}" />
                 <input id="terminate_{{instance.id}}" class="terminate" type="submit" value="Terminate" />
                 {% csrf_token %}
               </form>
               {% if instance.state == "running" %}
-              <a href="{% url nova_instances_console project.projectname instance.id %}" id="console_{{instance.id}}" class="console" target="_blank">Show Console</a>
+              <a href="{% url nova_instances_console tenant.id instance.id %}" id="console_{{instance.id}}" class="console" target="_blank">Show Console</a>
               {% endif %}
           </td>
           {% endif %}
@@ -99,7 +99,7 @@
         <div class="ui-state-highlight ui-corner-all">
           <p>
             <span class="ui-icon ui-icon-info"></span>
-            {% trans "No instances are currently running. You may start a new instance from the"%} <a href="{% url nova_images project.projectname %}">images</a> tab.
+            {% trans "No instances are currently running. You may start a new instance from the"%} <a href="{% url nova_images tenant.id %}">images</a> tab.
           </p>
         </div>
       </div>
