--- a/django-openstack/src/django_openstack/templates/django_openstack/nova/instances/detail_list.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/nova/instances/detail_list.html
@@ -13,15 +13,13 @@
 
   {% include "django_openstack/_messages.html" %}
 
-
   <div class="dash_block first">
     <h3 class="image_id">{% trans "Edit Instance:" %} {{ instance.id }}</h3>
 
-    <form class="edit_instance" id="rename_{{ instance.id }}" action="{% url nova_instance_update project.projectname instance.id %}" method="post">
+    <form class="edit_instance" id="rename_{{ instance.id }}" action="{% url nova_instance_update tenant.id instance.id %}" method="post">
       <fieldset>
         {% csrf_token %}
         {% for field in form %}
-
           {{ field.label_tag }}
           {% if field.errors %}{{ field.errors }}{% endif %}
           {{ field }}
