skeletal framework for non-admin dashboard

--- a/openstack-dashboard/dashboard/templates/base.html
+++ b/openstack-dashboard/dashboard/templates/base.html
@@ -1,5 +1,13 @@
-{% extends "base-root.html" %}
+{% include '_header.html' %}
 
-{% block rootcontent %}
-{% block content %}{% endblock %}
+{% block topbbar %}
+  {% include '_topbar.html' %}
 {% endblock %}
+
+{% block sidebar %}
+{% endblock %}
+
+{% block main %}
+{% endblock %}
+
+{% include '_footer.html' %}
