--- a/openstack-dashboard/dashboard/templates/_topbar.html
+++ b/openstack-dashboard/dashboard/templates/_topbar.html
@@ -1,1 +1,39 @@
-TOPBAR
+<div id='header'>
+  <h1><a href='{% url splash %}'>OpenStack Dashboard</a></h1>
+  <ul id="main_nav">
+
+  {% if request.user %}
+    <li><a {% if current_dash == "dash" %} class="active" {% endif %} href="{% url dash_overview %}">User Dashboard</a></li>
+
+    {% if request.user.is_admin %}
+    <li><a {% if current_dash == "admin" %} class="active" {% endif %} href="{% url admin_overview %}">Admin Syspanel</a></li>
+    {% endif %}
+  {% else %}
+    NOT LOGGED IN
+  {% endif %}
+  </ul>
+
+  <div id='login_box'>
+    {% if request.user %}
+      <div class="logged_in">
+        <div id="user_bar">
+          <a id="current_tenant" href="{% url dash_overview %}">
+            <h4>{{request.user.tenant}}</h4>
+            <span>as {{request.user.username}}</span>
+          </a>
+          <a id="drop_btn" href="#">&nbsp;</a>
+          <ul id="user_tenant_list">
+            <li class="title"><h4>Available Tenants</h4></li>
+            {% for tenant in tenants %}
+              {% if tenant.enabled %}
+                <li><a href="{% url auth_switch tenant.id %}">{{tenant.id}}</a></li>
+              {% endif %}
+            {% endfor %}
+            <li id="sign_out"><a href="{% url auth_logout %}">Sign Out</a></li>
+          </ul>
+        </div>
+      </div>
+    {% endif %}
+  </div>
+</div>
+
