--- a/openstack-dashboard/dashboard/templates/dash_overview.html
+++ b/openstack-dashboard/dashboard/templates/dash_overview.html
@@ -10,7 +10,85 @@
 {% endblock %}
 
 {% block main %}
+  <div id='page_header'>
+    <h2><span>Compute:</span> Overview</h2>
+    <p class='desc'><span>&mdash;</span> View your overall cloud usage statistics.</p>
+  </div>
+  <div class='main_content'>
+    {% include "_messages.html" %}
+    <div id="usage">
+      <div class="usage_block">
+        <h3>Bandwidth</h3>
+        <ul>
+          <li><span class="quantity">2.09</span><span class="unit">GB</span> Down</li>
+          <li><span class="quantity">1.29</span><span class="unit">GB</span> Up</li>
+        </ul>
+      </div>
 
-OVERVIEW FOR A USER
+      <div class="usage_block">
+        <h3>CPU</h3>
+        <ul>
+          <li><span class="quantity">{{usage.total_active_vcpus}}</span><span class="unit">Cores</span> Active</li>
+          <li><span class="quantity">{{usage.total_cpu_usage|floatformat}}</span><span class="unit">CPU/hr</span> Used</li>
+        </ul>
+      </div>
 
+      <div class="usage_block">
+        <h3>RAM</h3>
+        <ul>
+          <li><span class="quantity">{{usage.total_active_ram_size}}</span><span class="unit">GB</span> Active</li>
+        </ul>
+      </div>
+
+      <div class="usage_block">
+        <h3>Disk</h3>
+        <ul>
+          <li><span class="quantity">{{usage.total_active_disk_size}}</span><span class="unit">GB</span> Active</li>
+          <li><span class="quantity">{{usage.total_disk_usage|floatformat}}</span><span class="unit">GB/hr</span> Used</li>
+        </ul>
+      </div>
+     </div>
+
+    {% if usage.instances %}
+      <div class='table_title wide'>
+        <h3>Server Usage Summary</h3>
+        <div class='search'>
+          <form action='' method='post'>
+            <fieldset>
+              <label for='table_search'>Search</label>
+              <input id='table_search' name='search' type='text' value='' />
+            </fieldset>
+          </form>
+        </div>
+      </div>
+
+      <table class="wide">
+        <tr id='headings'>
+          <th>Name</th>
+          <th>User</th>
+          <th>VCPUs</th>
+          <th>Ram Size</th>
+          <th>Disk Size</th>
+          <th>Flavor</th>
+          <th>Uptime</th>
+          <th>Status</th>
+        </tr>
+        <tbody class='main'>
+          {% for instance in usage.instances %}
+          <tr class="{% cycle 'odd' 'even' %}">
+              <td>{{instance.name}}</td>
+              <td>{{instance.user_id}}</td>
+              <td>{{instance.vcpus}}</td>
+              <td>{{instance.ram_size}}</td>
+              <td>{{instance.disk_size}}</td>
+              <td>{{instance.flavor}}</td>
+              <td>{{instance.uptime|floatformat}}</td>
+              <td>{{instance.state}}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    {% endif %}
+  </div>
+</div>
 {% endblock %}
