--- a/django-openstack/src/django_openstack/templates/django_openstack/nova/base.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/nova/base.html
@@ -39,12 +39,12 @@
 {% block nav_projects %}
       {% load_projects %}
       <li>
-        <h3 class="active"><a href="/">Projects</a></h3>
+        <h3 class="active"><a href="{% url index %}">Projects</a></h3>
         <div id="projects">
           {% for p in projects %}
             <div id="{{ p.projectname }}" class="project{% if p.projectname == project.projectname %} active{% endif %}">
               <h4>
-                <a class="project_link" href="/project/{{ p.projectname }}">{{ p.projectname }}</a>
+                <a class="project_link" href="{% url nova_project p.projectname %}">{{ p.projectname }}</a>
                 {% if p.projectManagerId == user.username %}
                 <a id="manage_project_{{p.projectname}}"
                    class="manage_link"
