--- a/openstack-dashboard/dashboard/templates/403.html
+++ b/openstack-dashboard/dashboard/templates/403.html
@@ -17,11 +17,11 @@
   <div id="sidebar">
     <ul id="navigation">
       {% block nav_home %}
-      <li><h3><a href="/">Home</a></h3></li>
+      <li><h3><a href="{% url index %}">Home</a></h3></li>
       {% endblock %}
 
       {% block nav_projects %}
-      <li><h3><a href="/">Projects</a></h3></li>
+      <li><h3><a href="{% url index %}">Projects</a></h3></li>
       {% endblock %}
     </ul>
   </div> <!-- end sidebar -->
