cleanup + login page

--- a/openstack-dashboard/dashboard/templates/_topbar.html
+++ b/openstack-dashboard/dashboard/templates/_topbar.html
@@ -9,7 +9,7 @@
     <li><a {% if current_dash == "admin" %} class="active" {% endif %} href="{% url admin_overview %}">Admin Syspanel</a></li>
     {% endif %}
   {% else %}
-    NOT LOGGED IN
+    NOT _LOGGED_IN_TOPBAR
   {% endif %}
   </ul>
 
