launch, console log, vnc

--- a/openstack-dashboard/dashboard/templates/_instance_list.html
+++ b/openstack-dashboard/dashboard/templates/_instance_list.html
@@ -1,3 +1,4 @@
+<!-- TODO(termie): move most of this to django_openstack -->
 <table id='instances'>
   <tr id='headings'>
     <th>ID</th>
@@ -20,15 +21,15 @@
           <td id="actions">
             <ul>
               <li>
-                <form id="form_terminate_{{server.id}}" class="form-terminate" method="post" action="{% url dash_terminate request.user_tenant %}" >
+                <form id="form_terminate_{{instance.id}}" class="form-terminate" method="post" action="{% url dash_instances_terminate request.user.tenant instance.id %}" >
                   {% csrf_token %}
                   <input name="instance_id" type="hidden" value="{{instance.id}}" />
                   <input id="terminate_{{instance.id}}" class="terminate" type="submit" value="Terminate" />
                 </form>
               </li>
-              <li><a href="{% url dash_reboot request.user.tenant instance.id %}">Reboot</a></li>
-              <li><a target="_blank" href="{% url dash_console_log request.user.tenant instance.id %}">Log</a></li>
-              <li><a target="_blank" href="{% url dash_vnc_console request.user.tenant instance.id %}">VNC Console</a></li>
+              <li><a href="{% url dash_instances_reboot request.user.tenant instance.id %}">Reboot</a></li>
+              <li><a target="_blank" href="{% url dash_instances_console request.user.tenant instance.id %}">Log</a></li>
+              <li><a target="_blank" href="{% url dash_instances_vnc request.user.tenant instance.id %}">VNC Console</a></li>
             </ul>
         </td>
       </tr>
