add self-handling-form concept

--- a/django-openstack/src/django_openstack/templates/django_openstack/auth/_login.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/auth/_login.html
@@ -1,4 +1,4 @@
-<form action="{% url auth_login %}" method="post">
+<form action="" method="post">
   {% csrf_token %}
   <fieldset>
   {% for hidden in form.hidden_fields %}
