--- a/openstack-dashboard/dashboard/templates/splash.html
+++ b/openstack-dashboard/dashboard/templates/splash.html
@@ -23,6 +23,6 @@
     <div class='table_title narrow'>
       <h3>Login</h3>
     </div>
-    {% include '_login.html' with form=login_form %}
+    {% include '_login.html' %}
   </div>
 {% endblock %}
