--- a/openstack-dashboard/dashboard/templates/syspanel_usage.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_usage.html
@@ -17,6 +17,26 @@
   <div class='main_content'>
     {% include "_messages.html" %}
 
+    {% if external_links %}
+      <div id="monitoring">
+        <h3>Monitoring: </h3>
+        <ul id="external_links">
+          {% for link in external_links %}
+            <li><a target="_blank" href="{{ link.1 }}">{{ link.0 }}</a></li>
+          {% endfor %}
+        </ul>
+      </div>
+    {% endif %}
+
+    <form action="" method="get" id="date_form">
+      <!-- {% csrf_token %} -->
+      <h3> Select a month to query its usage: </h3>
+      <div class="form-row">
+        {{ dateform.date }}
+        <input class="submit" type="submit"/>
+      </div>
+    </form>
+
     <ul class='stat_box good'>
       <li class='status block'><span>Status:</span> Good</li>
       <li class='block'>
@@ -77,8 +97,6 @@
             <td>{{usage.total_disk_usage|floatformat}}</td>
           </tr>
         {% endfor %}
-    {% else %}
-      {% include "_messages.html" %}
     {% endif %}
   </div>
 </div>
