--- a/openstack-dashboard/dashboard/templates/syspanel_user_update.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_user_update.html
@@ -3,7 +3,7 @@
 {# standard nav, sidebar, list of instances in main #}
 
 {% block sidebar %}
-  {% with current_sidebar="images" %}
+  {% with current_sidebar="users" %}
     {{block.super}}
   {% endwith %}
 {% endblock %}
