add in services tab

--- a/openstack-dashboard/dashboard/templates/_syspanel_sidebar.html
+++ b/openstack-dashboard/dashboard/templates/_syspanel_sidebar.html
@@ -6,5 +6,6 @@
     <li><a {% if current_sidebar == "images" %} class="active" {% endif %} href="{% url syspanel_images %}">Images</a></li>
     <li><a {% if current_sidebar == "flavors" %} class="active" {% endif %} href="{% url syspanel_flavors %}">Flavors</a></li>
     <li><a {% if current_sidebar == "users" %} class="active" {% endif %} href="{% url syspanel_users %}">Users</a></li>
+    <li><a {% if current_sidebar == "services" %} class="active" {% endif %} href="{% url syspanel_services %}">Services</a></li>
   </ul>
 </div>
