--- a/openstack-dashboard/dashboard/templates/_delete_keypair.html
+++ b/openstack-dashboard/dashboard/templates/_delete_keypair.html
@@ -1,8 +1,8 @@
-<form id="form_delete_{{keypair.id}}" class="form-delete" method="post">
+<form id="form_delete_{{keypair.name}}" class="form-delete" method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}
     {{hidden}}
   {% endfor %}
-  <input name="keypair_id" type="hidden" value="{{keypair.id}}" />
-  <input id="delete_{{keypair.id}}" class="delete" type="submit" value="Delete" />
+  <input name="keypair_id" type="hidden" value="{{keypair.name}}" />
+  <input id="delete_{{keypair.name}}" class="delete" type="submit" value="Delete" />
 </form>
