--- a/openstack-dashboard/dashboard/templates/dash_keypairs_create.html
+++ b/openstack-dashboard/dashboard/templates/dash_keypairs_create.html
@@ -25,7 +25,7 @@
 
 {% block main %}
   <div id='page_header'>
-    <h2><span>Dashboard:</span> Keypairs </h2>
+    <h2><span>Compute:</span> Keypairs </h2>
     <p class='desc'><span>&mdash;</span> Create a keypair </p>
   </div>
 
