--- a/openstack-dashboard/dashboard/templates/_service_toggle_enabled.html
+++ b/openstack-dashboard/dashboard/templates/_service_toggle_enabled.html
@@ -5,15 +5,17 @@
       {{hidden}}
     {% endfor %}
     <input name="service" type="hidden" value="{{service.id}}" />
+    <input name="name" type="hidden" value="{{service.type}}" />
     <input id="disable_{{service.id}}" class="disable" type="submit" value="Disable" />
   </form>
-{% else %}                          
+{% else %}
   <form id="form_service_enable_{{service.id}}" class="form-service-enable" method="post">
     {% csrf_token %}
     {% for hidden in form.hidden_fields %}
       {{hidden}}
     {% endfor %}
     <input name="service" type="hidden" value="{{service.id}}" />
+    <input name="name" type="hidden" value="{{service.type}}" />
     <input id="enable_{{service.id}}" class="enable" type="submit" value="Enable" />
   </form>
 {% endif %}
