making suggested fixes from termie

--- a/openstack-dashboard/dashboard/templates/_syspanel_service_list.html
+++ b/openstack-dashboard/dashboard/templates/_syspanel_service_list.html
@@ -8,17 +8,11 @@
   </tr>
 
   {% for service in services %}
-    <tr class="{% if service.up %}good{% endif %} {% if service.disabled %}medium{% endif %}{% if not service.up %}bad{% endif %} {% cycle 'odd' 'even' %}">
-      <td> {{service.host}} </td>
-      <td> {{service.type}} </td>
-      <td>
-      {% if service.disabled %}
-          Disabled
-      {% else %}
-          Enabled
-      {% endif %}
-      </td>
-      <td> {{service.up}} </td>
+    <tr class='{{service.up|yesno:"good,bad"}} {{service.disabled|yesno:"medium,"}} {% cycle 'odd' 'even' %}'>
+      <td>{{service.host}}</td>
+      <td>{{service.type}}</td>
+      <td>{{service.disabled|yesno:"Enabled,Disabled"}}</td>
+      <td>{{service.up}}</td>
       <td id="actions">
         <ul>
           <li>{% include "_service_toggle_enabled.html" with form=service_toggle_enabled_form %}</li>
@@ -27,12 +21,12 @@
     </tr>
   {% endfor %}
   {% for service in other_services %}
-    <tr class="{% if service.up %}good{% endif %} {% if service.disabled %}medium{% endif %}{% if not service.up %}bad{% endif %} {% cycle 'odd' 'even' %}">
-      <td> {{service.host}} </td>
-      <td> {{service.type}} </td>
-      <td> Enabled </td>
-      <td> {{service.up}} </td>
-      <td> </td>
+    <tr class='{{service.up|yesno:"good,bad"}} {{service.disabled|yesno:"medium,"}} {% cycle 'odd' 'even' %}'>
+      <td>{{service.host}}</td>
+      <td>{{service.type}}</td>
+      <td>{{service.disabled|yesno:"Enabled,Disabled"}}</td>
+      <td>{{service.up}}</td>
+      <td></td>
     </tr>
   {% endfor %}
 </table>
