--- a/openstack-dashboard/dashboard/templates/syspanel_services.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_services.html
@@ -11,7 +11,7 @@
 {% block main %}
     <div id='page_header'>
       <h2><span>System Panel:</span> Services</h2>
-      <p class='desc'><span>&mdash;</span> Create, Edit, Upload, and Delete Services.</p>
+      <p class='desc'><span>&mdash;</span>View Service statuses, and toggle them to enabled or disabled.</p>
     </div>
     {% include "_messages.html" %}
     <div class="main_content">
