--- a/openstack-dashboard/dashboard/templates/splash.html
+++ b/openstack-dashboard/dashboard/templates/splash.html
@@ -1,28 +1,20 @@
-{% extends 'base.html' %}
-
-{# pleasant landing page if not logged in #}
-{# redirected to overview if logged in #}
-
-
-{% block sidebar %}
-  <div id="sidebar">
-    EMPTY_SIDEBAR
-  </div>
-{% endblock %}
-
-{% block main %}
-  <div id='page_header'>
-    <h2><span>Compute:</span> Login</h2>
-    <p class='desc'><span>&mdash;</span> Login to OpenStack via Keystone auth.</p>
-  </div>
-  <div class='main_content'>
-
-  {% include "_messages.html" %}
-
-  <div class="dash_block" id="login_wrapper">
-    <div class='table_title narrow'>
-      <h3>Login</h3>
+<!DOCTYPE html>
+<html lang="en" xml:lang="en">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <title>Login</title>
+    <link href='/media/dashboard/css/style.css' media='screen' rel='stylesheet' /> 
+  </head>
+  <body id="standalone">
+    <div id="login_wrapper">
+      <div class='large-rounded' id='login'>
+        {% include '_login.html' %}
+        <ul id='alternate_links'> 
+          <li>&nbsp;</li>
+          <li>&nbsp;</li>
+        </ul> 
+        <div class="clear"></div>
+      </div> 
     </div>
-    {% include '_login.html' %}
-  </div>
-{% endblock %}
+  </body>
+</html>
