fix enabled/disabled logic for services

--- a/openstack-dashboard/dashboard/templates/_service_toggle_enabled.html
+++ b/openstack-dashboard/dashboard/templates/_service_toggle_enabled.html
@@ -1,14 +1,4 @@
-{% if service.enabled %}               
-  <form id="form_service_disable_{{service.id}}" class="form-service-disable" method="post">
-    {% csrf_token %}
-    {% for hidden in form.hidden_fields %}
-      {{hidden}}
-    {% endfor %}
-    <input name="service" type="hidden" value="{{service.id}}" />
-    <input name="name" type="hidden" value="{{service.type}}" />
-    <input id="disable_{{service.id}}" class="disable" type="submit" value="Disable" />
-  </form>
-{% else %}
+{% if service.disabled %}               
   <form id="form_service_enable_{{service.id}}" class="form-service-enable" method="post">
     {% csrf_token %}
     {% for hidden in form.hidden_fields %}
@@ -17,5 +7,15 @@
     <input name="service" type="hidden" value="{{service.id}}" />
     <input name="name" type="hidden" value="{{service.type}}" />
     <input id="enable_{{service.id}}" class="enable" type="submit" value="Enable" />
+  </form>
+{% else %}
+  <form id="form_service_disable_{{service.id}}" class="form-service-disable" method="post">
+    {% csrf_token %}
+    {% for hidden in form.hidden_fields %}
+      {{hidden}}
+    {% endfor %}
+    <input name="service" type="hidden" value="{{service.id}}" />
+    <input name="name" type="hidden" value="{{service.type}}" />
+    <input id="disable_{{service.id}}" class="disable" type="submit" value="Disable" />
   </form>
 {% endif %}
