add messages to splash

--- a/openstack-dashboard/dashboard/templates/splash.html
+++ b/openstack-dashboard/dashboard/templates/splash.html
@@ -8,6 +8,7 @@
   <body id="standalone">
     <div id="login_wrapper">
       <div class='large-rounded' id='login'>
+        {% include "_messages.html" %}
         {% include '_login.html' %}
         <ul id='alternate_links'> 
           <li>&nbsp;</li>
