use td#actions instead for css selection + form elements

--- a/openstack-dashboard/media/dashboard/css/style.css
+++ b/openstack-dashboard/media/dashboard/css/style.css
@@ -665,6 +665,20 @@ td#actions li a {
   font-size: 11px !important;
 }
 
+td#actions form input[type="submit"] {
+    font-size: 11px;
+    border: 0px;
+    background: transparent;
+    color: #3fb9d3;
+    cursor: pointer;
+    padding: 0px;
+    margin: 0px;
+}
+
+td#actions input[type="submit"]:hover {
+    text-decoration: underline;
+}
+
  .terminate {
 	cursor: pointer;
   background-color: transparent;
@@ -731,18 +745,6 @@ table {
 	margin-bottom: 25px;
 }
 
-table tr td form input[type="submit"] {
-    border: 0px;
-    background: transparent;
-    color: #3fb9d3;
-    cursor: pointer;
-    padding: 0px;
-    margin: 0px;
-}
-
-table tr td form input[type="submit"]:hover {
-    text-decoration: underline;
-}
 
 .dash_block.wide form {
 	width: 319px;
